- Fix sidenav overflow - Fix text wrap in contact

--- a/frontend/src/app/containers/side-nav/side-nav.component.scss
+++ b/frontend/src/app/containers/side-nav/side-nav.component.scss
@@ -6,6 +6,7 @@
 	height: 100%;
 	flex-wrap: nowrap;
 	background-color: $neutral;
+	overflow-y: auto;
 	.btn-float {
 		position: fixed;
 		transform: translateX($sidenav-base-width + 20px);
