--- a/frontend/src/styles/layout/_sidenav.scss
+++ b/frontend/src/styles/layout/_sidenav.scss
@@ -11,11 +11,6 @@
 		height: 100vh;
 		// By default the sidenav will be moved off-canvas
 		transform: translateX(-$sidenav-base-width);
-		.sidenav {
-			.sidenav-menu {
-				overflow-y: auto;
-			}
-		}
 	}
 	// Wraps the content when using the sidenav layout
 	#layoutSidenav_content {
